--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,10 +14,13 @@
  *= require_self
  */
 
-@import 'introductions';
-
+@import 'messages';
+@import 'stores';
 .bb{
 	background-color: lightblue;
 	width: 100%;
 	height: 300px;
+}
+.cc{
+	background-color: #cca6bf;
 }
