finish  new create post

--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -23,3 +23,12 @@
 	background-color: #c1e4e9;
 	text-align: center;
 }
+.post-box{
+	background-color: #eaf4fc;
+	display: flex;
+}
+.post-item{
+	background-color: #c37854;
+	text-align: center;
+	flex-wrap:wrap;
+}
