--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -3,6 +3,7 @@
 
 <div class="store-show">
 	<div><%= attachment_image_tag @store, :image,:fill,400,400, fallback: "no_image.jpg",size:'400x400' %></div>
+	<div><%= @store.owner.nickname %></div>
 	<div><%= @store.store_name %></div>
 	<div><%= @store.good %></div>
 	<div><%= @store.introduction %></div>
