--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,10 +1,14 @@
+<h3>customerのマイページ</h3>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
-    <%= f.label :name_kana %><br />
-    <%= f.email_field :name_kana, autofocus: true, autocomplete: "name_kana" %>
+    <%= f.attachment_field :image, autofocus: true, autocomplete: "image" %>
+  </div>
+  <div class="field">
+    <%= f.label :nickname %><br />
+    <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
