--- a/app/views/owners/registrations/edit.html.erb
+++ b/app/views/owners/registrations/edit.html.erb
@@ -1,19 +1,20 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>店主の編集ページ</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.email_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
   <div class="field">
     <%= f.label :name_kana %><br />
-    <%= f.email_field :name_kana, autofocus: true, autocomplete: "name_kana" %>
+    <%= f.text_field :name_kana, autofocus: true, autocomplete: "name_kana" %>
   </div>
   <div class="field">
     <%= f.label :nickname %><br />
-    <%= f.email_field :nickname, autofocus: true, autocomplete: "nickname" %>
+    <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
