--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,11 +1,10 @@
 <h1>Stores#index</h1>
 <p>店主一覧はこちらトップページね</p>
-
-
 	<div class="store-row">
 			<% @stores.each do |store| %>
 			<div class="store-item">
-				<div><%= attachment_image_tag store, :image,:fill,150,150, fallback: "no_image.jpg",size:'150x150' %></div>
+				<div><%= attachment_image_tag store, :image,:fill,510,319, fallback: "no_image.jpg",size:'510x319' %></div>
+				<div><%= store.owner.nickname %></div>
 				<div><%= store.store_name %></div>
 				<div><%= store.good %></div>
 				<div><%= store.introduction %></div>
@@ -13,4 +12,3 @@
 			</div>
 			<% end %>
 	</div>
-
