--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,10 @@
-<h1>Posts#new</h1>
-<p>投稿の追加</p>
- <% if flash[:notice] %>
- <%= flash[:notice] %>
- <% end %>
-
 <!-- 投稿作成 -->
-<%= form_for @post, url: store_posts_path do |f| %>
-<%= f.attachment_field :image %>
-<%= f.text_field :comment %>
-<%= f.submit "投稿" %>
-<% end %>
+<div class="post-main">
+	<div class="post-box-new">
+	<%= form_for @post, url: store_posts_path do |f| %>
+		<div><%= f.attachment_field :image %></div>
+		<div><%= f.text_field :comment %></div>
+		<div><%= f.submit "投稿" %></div>
+	<% end %>
+	</div>
+</div>
