--- a/app/views/starts/about.html.erb
+++ b/app/views/starts/about.html.erb
@@ -1,6 +1,8 @@
-<h1>Starts#about</h1>
 <p>このwebサイトについて</p>
 <p>こんなことやあんなことができまっす</p>
 
+<p>登録する</p>
+<div><%= link_to 'ユーザー新規登録', new_customer_registration_path , class: 'link_color_nav'%></div>
+<p>あーだこーだ</p>
+<div><%= link_to '店主として掲載を考えてる', starts_concept_path , class: 'link_color_nav' %></div>
 
-<%= link_to '店主として掲載を考えてる', starts_concept_path %>
