--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -2,12 +2,77 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.message-main{
+	display: flex;
+}
+.message-box{
+	margin-top: 100px;
+}
+.message-label{
+	border: solid 1px #a1a7ad;
+	background-color: #f9f7f0;
+	height: 80px;
+	margin-top: 40px;
+	color: #606060;
+	font-size: 20px;
+	text-align: center;
+	padding-top: 40px; 
+}
 .message-item{
-	background-color: lightblue;
+	height: 45px;
+	font-size: 15px;
+	/*order: solid 0.5px #a1a7ad;*/
+	padding: 20px;
+	border-radius: 10px;
+	padding: 0.5em 1em;
+	margin-top: 50px;
+	strong{
+		font-size: 27px;
+		margin:10px;
+		border: solid 1px #a1a7ad;
+	}
+}
+.message-item-box{
+	height: 100%;
+	width: 100%;
+}
+.link_color_message{
+	color: #8d9b9f;
+	text-decoration:none;
+	font-size: 15px;
+	&:hover {
+	color: #f9f7f0;
+	}
 }
 .left-side{
 	text-align: left;
+	background-color: #e9eaee;
+	margin-right: 600px;
+
 }
 .right-side{
 	text-align: right;
+	background-color: #f9f7f0;
+	margin-left: 600px;
+}
+.message-input-box{
+	display: flex;
+	height: 600px;
+}
+.message-input-box-item{
+	margin: 0 auto;
+	input[type="text"] {
+	        width: 700px;
+	        height: 30px;
+	        border-radius: 10px;
+	    }
+	input[type="submit"] {
+	        width: 100px;
+	        height: 20px;
+	        border-style: solid;
+	        color: #79797a;
+	        background-color: #f5f5f5;
+	        border-radius: 15px;
+	        margin-top: 50px;
+		}
 }
