return config file

--- a/app/assets/stylesheets/starts.scss
+++ b/app/assets/stylesheets/starts.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the starts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.start-main{
+	text-align: center;
+}
+.start-main-box{
+	margin: 80px auto;
+}
+/*登録ページ*/
+.registration-main{
+	text-align: center;
+}
+.registration-main-box{
+	margin: 80px;
+}
