--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,9 +26,14 @@ header{
 	font-size: 16px;
 }
 .bb{
-	background-color: lightblue;
+	background-color: #cca6bf;
 	width: 100%;
-	height: 300px;
+	height: 50px;
+	text-align: center;
+	p{
+		color: #3471a1;
+		font-size: 30px;
+	}
 }
 .cc{
 	background-color: #cca6bf;
