--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,8 +1,9 @@
 
 <div><%= devise_error_messages %></div>
 
-<h2>Sign up</h2>
-<div>店主新規登録用</div>
+<div class="registration-main">
+  <div class="registration-main-box">
+<div>店主新規登録ページ</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
   <div class="field form-group">
@@ -40,3 +41,5 @@
 <% end %>
 
 <%= render "owners/shared/links" %>
+</div>
+</div>
