--- a/app/views/starts/explain.html.erb
+++ b/app/views/starts/explain.html.erb
@@ -1,6 +1,9 @@
-<h1>Starts#explain</h1>
-<p>登録できました！！</p>
+<div class="start-main">
+	<div class="start-main-box">
+	<p>登録できました！！</p>
 
-<p>こんなイメージで作っっていってくださいね</p>
+	<p>こんなイメージで作っっていってくださいね</p>
 
-<%= link_to '始める', new_store_path %>
+	<%= link_to '始める', new_store_path , class: 'link_color_nav'%>
+	</div>
+</div>
