--- a/app/views/starts/explain.html.erb
+++ b/app/views/starts/explain.html.erb
@@ -2,7 +2,7 @@
 	<div class="start-main-box">
 	<p>登録できました！！</p>
 
-	<p>こんなイメージで作っっていってくださいね</p>
+	<p>こんなイメージで作っていってくださいね</p>
 
 	<%= link_to '始める', new_store_path , class: 'link_color_nav'%>
 	</div>
