--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,13 +19,34 @@ input[type="text"] {
         width: 360px;
         height: 100px;
     }
-input[type="submit"] {
+    input[type="submit"] {
         width: 100px;
-        height: 40px;
+        height: 50px;
         border-style: solid;
-        color: #79797a;
+        color: #333230;
         background-color: #f5f5f5;
         border-radius: 15px;
         margin-top: 50px;
+            &:hover {
+                color: #c8c1bc;
+                background-color: #08558c;
+            }
+    }
 }
+.post-box{
+    background-color: #e9eaee;
+    display: flex;
+    padding: 80px 40px;
+    margin: 0 70px;
+}
+.post-item{
+    background-color: #e9eaee;
+    text-align: center;
+    flex-wrap:wrap;
+    width: 100%;
+}
+.post-image{
+    width: 369px;
+    height: 300px;
+    background-color: white;
 }
