--- a/app/views/starts/about.html.erb
+++ b/app/views/starts/about.html.erb
@@ -1,39 +1,16 @@
 <div class="start-main">
 	<div class="start-main-box">
-		<h1>もののん商店街</h1>
-		<h3>和のモノやサービスを取り扱っている店主を見つける「人を見つけるための」専用サイト。気になる店主を見つけて、その人とメッセージのやりとりができます。</h3>
-<hr>
-	<div class="characteristic-box">
-		<h1>三つの特徴</h1>
-		<div class="characteristic">
-			<div class="characteristic-item">
-				<h2>01.和に特化している</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
-			</div>
-			<div class="characteristic-item">
-				<h2>02.こだわりを持った店主</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
-			</div>
-			<div class="characteristic-item">
-				<h2>03.店主とメッセージができる</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
-			</div>
-		</div>
-	</div>
-<hr>
-<div class="how-start">
-	<h1>サイトの使い方</h1>
-	<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
-	<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
-</div>
-<hr>
-<div class="how-start">
-	<h1>｜ さあ、店主に会いに行こう　｜</h1>
-	<div><%= link_to '新規登録', new_customer_registration_path , class: 'link_color_start'%></div>
-</div>
-<hr>
+	<p>このwebサイトについて</p>
+	<p>こんなことやあんなことができまっす</p>
 
-	<div><%= link_to '店主として掲載を考えてる >>', starts_concept_path , class: 'link_color_start' %></div>
+
+	<div><%= link_to '新規登録', new_customer_registration_path , class: 'link_color_nav'%></div>
+	<p>あーだこーだ</p>
+
+
+
+	
+	<div><%= link_to '店主として掲載を考えてる', starts_concept_path , class: 'link_color_nav' %></div>
 	</div>
 </div>
 
