--- a/app/views/starts/concept.html.erb
+++ b/app/views/starts/concept.html.erb
@@ -1,10 +1,8 @@
 <div class="start-main">
 	<div class="start-main-box">
-		<div class="start-concept">
-			<div class="start-concept-item"><h1>JapanStreet</h1></div>
-			<div class="start-concept-item"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliquaLorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h3></div>
-		</div>
+	<p>和の商店街コンセプト</p>
 
-	<%= link_to '店主として登録する', new_owner_registration_path , class: 'link_color_start'%>
+
+	<%= link_to '店主として登録する', new_owner_registration_path %>
 	</div>
 </div>
