--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 }
 .store-box-itme{
-	background-color: #f2f2f2;
+	background-color: #e9eaee;
 	margin: 100px 0 0 170px;
 
 }
@@ -26,36 +26,25 @@
 	justify-content: flex-end;
 }
 .store-show-main{
+	background-color: #e9eaee;
 	width: 100%;
 }
-.store-show-box{
+.store-show{
+	background-color: #e9eaee;
+	text-align: center;
+	padding: 50px;
+}
+.post-box{
+	background-color: #e9eaee;
 	display: flex;
-/*	background-color: #f2f2f2;*/
+	padding: 80px 40px;
+	margin: 0 70px;
 }
-.store-show-box-item{
-	width: 670px;
-	height: 720px;
-	align-self: center;
-	padding-left: 100px;
-	padding-top: 150px;
-	input[type="submit"] {
-        width: 200px;
-        height: 50px;
-        border-style: solid;
-        color: #333230;
-        background-color: #f5f5f5;
-        border-radius: 15px;
-        margin-top: 50px;
-            &:hover {
-                color: #c8c1bc;
-                background-color: #08558c;
-            }
-    }
-
-}
-
-.store-image-box{
-	flex-basis: 50%;
+.post-item{
+	background-color: #e9eaee;
+	text-align: center;
+	flex-wrap:wrap;
+	width: 100%;
 }
 .store-image {
 	transition-duration: 0.5s;
@@ -67,34 +56,31 @@
   color: #383636;
 }
 .store-text{
-	margin-top: 10px;
-	margin-left: 90px;
-	text-align: left;
 	font-family: 'TsukuARdGothic-Regular','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体','ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;
-	color: #333230;
+	color: #3471a1;
 	&:hover {
-	color: #b8b8b7;
+	color: #9d9981;
 	}
 
 }
 .nickname{
-	font-size: 24px;
+	font-size: 35px;
 	display: inline-block;
+	border-bottom: 2px solid;
+	margin-top: 10px;
+	margin-bottom: 15px;
 }
 .text-good{
-	font-size: 14px;
-	margin-bottom: 10px;
-	margin-left: 4px;
+	font-size: 20px;
 }
 .store-show-text{
-	color: #333230;
+	color: #09558c;
 }
 .link_color{
 	text-decoration:none;
 }
 .show-nickname{
-	font-size: 25px;
-	margin:0 0 50px 20px;
+	font-size: 35px;
 }
 .store-show-main{
 	margin-top: 80px;
