--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,14 +26,9 @@ header{
 	font-size: 16px;
 }
 .bb{
-	background-color: #cca6bf;
+	background-color: lightblue;
 	width: 100%;
-	height: 50px;
-	text-align: center;
-	p{
-		color: #3471a1;
-		font-size: 30px;
-	}
+	height: 300px;
 }
 .cc{
 	background-color: #cca6bf;
