--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -1,9 +1,8 @@
 
 <div><%= devise_error_messages %></div>
 
-<div class="registration-main">
-  <div class="registration-main-box">
-<div>店主新規登録ページ</div>
+<h2>Sign up</h2>
+<div>店主新規登録用</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
   <div class="field form-group">
@@ -41,5 +40,3 @@
 <% end %>
 
 <%= render "owners/shared/links" %>
-</div>
-</div>
