--- a/app/views/starts/about.html.erb
+++ b/app/views/starts/about.html.erb
@@ -1,18 +1,8 @@
-<div class="start-main">
-	<div class="start-main-box">
-	<p>このwebサイトについて</p>
-	<p>こんなことやあんなことができまっす</p>
+<p>このwebサイトについて</p>
+<p>こんなことやあんなことができまっす</p>
 
-
-	<div><%= link_to '新規登録', new_customer_registration_path , class: 'link_color_nav'%></div>
-	<p>あーだこーだ</p>
-
-
-
-	
-	<div><%= link_to '店主として掲載を考えてる', starts_concept_path , class: 'link_color_nav' %></div>
-	</div>
-</div>
-
-
+<p>登録する</p>
+<div><%= link_to 'ユーザー新規登録', new_customer_registration_path , class: 'link_color_nav'%></div>
+<p>あーだこーだ</p>
+<div><%= link_to '店主として掲載を考えてる', starts_concept_path , class: 'link_color_nav' %></div>
 
