--- a/app/views/starts/concept.html.erb
+++ b/app/views/starts/concept.html.erb
@@ -1,8 +1,5 @@
-<div class="start-main">
-	<div class="start-main-box">
-	<p>和の商店街コンセプト</p>
+<h1>Starts#concept</h1>
+<p>和の商店街コンセプト</p>
 
 
-	<%= link_to '店主として登録する', new_owner_registration_path %>
-	</div>
-</div>
+<%= link_to '店主として登録する', new_owner_registration_path %>
